<resources>
    <string name="app_name">Nanodegree Portfolio</string>
    <string name="my_title">My Portfolio!</string>
    <string name="popular_movies">popular movies</string>
    <string name="stock_hawk">stock hawk</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
</resources>
