<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:isScrollContainer="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_title"
        android:text="@string/my_title"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="24sp"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"/>
    
    <Button
        android:id="@+id/popular_movies_button"
        android:text="@string/popular_movies"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/my_title"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame"/>
    <Button
        android:id="@+id/stock_hawk_button"
        android:text="@string/stock_hawk"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/popular_movies_button"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame"/>

    <Button
        android:id="@+id/build_it_bigger_button"
        android:text="@string/build_it_bigger"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/stock_hawk_button"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame" />

    <Button
        android:id="@+id/make_your_app_material_button"
        android:text="@string/make_your_app_material"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/build_it_bigger_button"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame"/>

    <Button
        android:id="@+id/go_ubiquitous_button"
        android:text="@string/go_ubiquitous"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/make_your_app_material_button"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame"/>

    <Button
        android:id="@+id/capstone_button"
        android:text="@string/capstone"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/go_ubiquitous_button"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame"/>

    </RelativeLayout>
</ScrollView>